hphp/test/quick/incdec-magic2.php.expectf
Foo heh
Bar heh
Foo heh

Fatal error: Cannot access protected property in %s/test/quick/incdec-magic2.php on line 20
